--- a/assets/commit-hygiene/index.html
+++ b/assets/commit-hygiene/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Commit Hygiene</title>
-    <script type="module" crossorigin src="./index-CTB4LQ7D.js"></script>
+    <script type="module" crossorigin src="./index-DUHV-TOO.js"></script>
   </head>
   <body>
     <div id="commit-hygiene-root"></div>
