--- a/assets/deployment-scaffold/index.html
+++ b/assets/deployment-scaffold/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deployment Scaffold</title>
-    <script type="module" crossorigin src="./index-D9bngF7Z.js"></script>
+    <script type="module" crossorigin src="./index-DKvLLuVu.js"></script>
   </head>
   <body>
     <div id="deployment-scaffold-root"></div>
