--- a/assets/docs-diagnostic/index.html
+++ b/assets/docs-diagnostic/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Docs Diagnostic</title>
-    <script type="module" crossorigin src="./index-Dj9Ahdzj.js"></script>
+    <script type="module" crossorigin src="./index-CMVboGzN.js"></script>
   </head>
   <body>
     <div id="docs-diagnostic-root"></div>
